--- a/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
+++ b/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
@@ -11,32 +11,44 @@
     "L'énergie totale d'un corps s'écrit $E=\\gamma mc^2$ alors que l'énergie de repos s'écrit $E_0=mc^2$, donc l'énergie cinétique est $T=E-E_0=(\\gamma-1)mc^2$. En inversant cette équation, on obtient $$\\boxed{\\gamma=\\frac{T}{mc^2}+1}$$ Par leur définition, $\\beta=\\frac{v}{c}$ et $\\gamma=\\frac{1}{\\sqrt{1-\\frac{v^2}{c^2}}}$. Par substitution, on voit que $$\\boxed{\\gamma=\\frac{1}{\\sqrt{1-\\beta^2}}}\\quad\\text{et}\\quad\\boxed{\\beta=\\sqrt{1-\\frac{1}{\\gamma^2}}}$$\n",
     "\n",
     "## 2.\n",
-    "La densité électronique ($n_e$) est le nombre d'électrons par unité de volume, ce qui correspond à la somme des densités atomiques des différents éléments du matériau multipliées par leur nombre de proton ($Z$) correspondant (en présumant que le matériau est électriquement neutre). La densité atomique d'un élément correspond à la densité massique du matériau ($\\rho$) multipliée par la fraction de la masse du matériau appartenant à l'élément ($\\xi$). Autrement dit, $$n_e=\\rho\\sum_{Z=1}^\\infty Z\\xi_Z$$"
+    "La densité électronique ($n_e$) est le nombre d'électrons par unité de volume, ce qui correspond à la somme des densités atomiques des différents éléments du matériau multipliées par leur nombre de proton ($Z$) par atome correspondant (en présumant que le matériau est électriquement neutre). La densité atomique d'un élément correspond à la densité massique du matériau ($\\rho$) en grammes par cm$^3$ multipliée par la fraction de la masse du matériau appartenant à l'élément ($\\xi$) divisée par la masse atomique de l'élément ($m_Z$) en grammes par mole, le tout multiplié par le nombre d'Avogadro ($N_o$) pour que les grammes par moles deviennent des grammes par atome. Autrement dit, $$n_e=\\rho N_o\\sum_{Z=1}^\\infty\\frac{Z\\xi_Z}{m_Z}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Densité électronique de l'eau: 7.216742\n",
+      "Densité électronique de l'eau: 3.342731617093692e+23 électrons par cm^3\n",
       "\n",
-      "Densité électronique de l'os cortical: 19.663394699999998\n"
+      "Densité électronique de l'os cortical: 5.8077060231519456e+23 électrons par cm^3\n"
      ]
     }
    ],
    "source": [
-    "def densite_elec_massique(masses_materiau):\n",
+    "def densite_elec_massique(masses_materiau, masses_atomiques):\n",
     "    densite = 0\n",
     "    for i in masses_materiau:\n",
-    "        densite += i * masses_materiau[i]\n",
+    "        densite += i * masses_materiau[i] / masses_atomiques[i]\n",
     "    return densite\n",
     "\n",
     "\n",
+    "masses_atomiques = {\n",
+    "    1: 1.0079,\n",
+    "    6: 12.0107,\n",
+    "    7: 14.0067,\n",
+    "    8: 15.9994,\n",
+    "    12: 24.305,\n",
+    "    15: 30.9738,\n",
+    "    16: 32.065,\n",
+    "    20: 40.078,\n",
+    "    30: 65.39,\n",
+    "}\n",
+    "avogadro = 6.022 * 10 ** 23\n",
     "masses_eau = {1: 0.111894, 8: 0.888106}\n",
     "masses_os = {\n",
     "    1: 0.047234,\n",
@@ -53,12 +65,12 @@
     "dens_masse_eau = 1\n",
     "\n",
     "\n",
-    "densite_elec_eau = dens_masse_eau * densite_elec_massique(masses_eau)\n",
-    "densite_elec_os = dens_masse_os * densite_elec_massique(masses_os)\n",
+    "densite_elec_eau = dens_masse_eau * avogadro * densite_elec_massique(masses_eau, masses_atomiques)\n",
+    "densite_elec_os = dens_masse_os * avogadro * densite_elec_massique(masses_os, masses_atomiques)\n",
     "\n",
     "\n",
-    "print(\"Densité électronique de l'eau: {0}\\n\".format(densite_elec_eau))\n",
-    "print(\"Densité électronique de l'os cortical: {0}\".format(densite_elec_os))"
+    "print(\"Densité électronique de l'eau: {0} électrons par cm^3\\n\".format(densite_elec_eau))\n",
+    "print(\"Densité électronique de l'os cortical: {0} électrons par cm^3\".format(densite_elec_os))"
    ]
   },
   {
@@ -71,8 +83,8 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "def pouvoir(energie):\n",
-    "    coefficient = 2 * math.pi * \n",
+    "def pouvoir(energie, dens, re, me, c, Tmax):\n",
+    "    coefficient = 2 * np.pi * re ** 2 * me * c ** 2 * dens / \n",
     "\n",
     "\n",
     "re = 2.82 * 10 ** (-15)  # Rayon classique de l'électron (m)\n",
