--- a/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
+++ b/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
@@ -99,9 +99,8 @@
     "\n",
     "def pouvoir(energie, dens, re, me, Tmax, betac, gammac):\n",
     "    '''Approximation du pouvoir d'arrêt en fonction de l'énergie cinétique'''\n",
-    "    coefficient = lambda T : 2 * np.pi * re ** 2 * me * dens / betac(T)\n",
-    "    log_argument = lambda T : 2 * me * betac(T) * gammac(T) * Tmax(T) / energie ** 2\n",
-    "    Scol = lambda T : coefficient(T) * (np.log(log_argument(T)) - 2 * betac(T))\n",
+    "    Scol = lambda T : (2 * np.pi * re ** 2 * me * dens / betac(T)) * \\\n",
+    "            (np.log(2 * me * betac(T) * gammac(T) * Tmax(T) / energie ** 2) - 2 * betac(T))\n",
     "    return Scol\n",
     "\n",
     "\n",
