--- a/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
+++ b/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
@@ -31,6 +31,7 @@
    ],
    "source": [
     "def densite_elec_massique(masses_materiau, masses_atomiques, rho, avogadro):\n",
+    "    \"\"\"Évalue la densité électronique en électrons par cm^3\"\"\"\n",
     "    densite = 0\n",
     "    for i in masses_materiau:\n",
     "        densite += i * masses_materiau[i] / masses_atomiques[i]\n",
@@ -39,7 +40,7 @@
     "    return densite\n",
     "\n",
     "\n",
-    "avogadro = 6.022 * 10 ** 23\n",
+    "avogadro = 6.022 * 10 ** 23  # [atomes par mole]\n",
     "masses_atomiques = {\n",
     "    1: 1.0079,\n",
     "    6: 12.0107,\n",
@@ -51,7 +52,6 @@
     "    20: 40.078,\n",
     "    30: 65.39,\n",
     "}\n",
-    "\n",
     "\n",
     "masses_eau = {1: 0.111894, 8: 0.888106}\n",
     "masses_os = {\n",
@@ -65,13 +65,11 @@
     "    20: 0.209930,\n",
     "    30: 0.000100\n",
     "}\n",
-    "rho_os = 1.85\n",
+    "rho_os = 1.85  # Densités massiques [g/cm^3]\n",
     "rho_eau = 1\n",
-    "\n",
     "\n",
     "densite_elec_eau =  densite_elec_massique(masses_eau, masses_atomiques, rho_eau, avogadro)\n",
     "densite_elec_os = densite_elec_massique(masses_os, masses_atomiques, rho_os, avogadro)\n",
-    "\n",
     "\n",
     "print(\"Densité électronique de l'eau: {0} électrons par cm^3\\n\".format(densite_elec_eau))\n",
     "print(\"Densité électronique de l'os cortical: {0} électrons par cm^3\".format(densite_elec_os))"
@@ -116,10 +114,8 @@
     "energie_eau = 75 * 10 ** -6  # Énergies d'excitation moyenne (MeV)\n",
     "energie_os = 106.4 * 10 ** -6\n",
     "\n",
-    "\n",
     "Scol_eau = np.vectorize(pouvoir(energie_eau, densite_elec_eau, re, me, Tmax, betac, gammac))\n",
     "Scol_os = np.vectorize(pouvoir(energie_os, densite_elec_os, re, me, Tmax, betac, gammac))\n",
-    "\n",
     "\n",
     "axis = np.linspace(0.05, 1, 2000)\n",
     "axis = np.append(axis, np.linspace(1.01, 30, 2000))\n",
@@ -210,12 +206,14 @@
    ],
    "source": [
     "def apply_trap(n, Scol, rho, Tproton):\n",
+    "    \"\"\"Évaluation de l'intégrale par la méthode des trapèzes pour la (n-1)ième itération\"\"\"\n",
     "    test_points = np.linspace(0.05, Tproton, 2 ** n)\n",
     "    integrale = np.trapz(Scol(test_points), x=test_points)\n",
     "    return integrale\n",
     "\n",
     "\n",
     "def iterate(Scol, rho, Tproton, cible):\n",
+    "    \"\"\"\"\"\"\n",
     "    erreur = cible + 1\n",
     "    n = 1\n",
     "    prev = apply_trap(0, Scol, rho, Tproton)\n",
@@ -226,15 +224,14 @@
     "        prev = current\n",
     "        n += 1\n",
     "    \n",
-    "    results = [n, current, erreur]\n",
+    "    results = [n - 1, current, erreur]\n",
     "    return current\n",
     "\n",
     "\n",
-    "cible = 10 ** -9\n",
-    "Tproton = 100\n",
+    "cible = 10 ** -9  # Erreur cible [cm]\n",
+    "Tproton = 100  # Énergie cinétique du proton incident [MeV]\n",
     "\n",
-    "\n",
-    "    "
+    "\n"
    ]
   }
  ],
