--- a/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
+++ b/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,21 +186,58 @@
     "## 5.\n",
     "\n",
     "## 6.\n",
-    "L'intégrale pour calculer le $R_{RCSDA}$ peut se calculer grace à un algorithme adaptatif utilisant la méthode des trapèzes. L'intégration adaptatif consiste à utiliser un petit nombre de trapèzes puis le doubler le nombre itérativement justqu'à l'obtention de l'erreur désirée. \n",
+    "L'intégrale pour calculer le $R_{CSDA}$ peut se calculer grace à un algorithme adaptatif utilisant la méthode des trapèzes. L'intégration adaptatif consiste à utiliser un petit nombre de trapèzes puis le doubler le nombre itérativement justqu'à l'obtention de l'erreur désirée. \n",
     "L'erreur se calcul comme suit: $$\\varepsilon_i = \\frac{I_i- I_{i - 1}}{3}$$\n",
     "Dans notre cas, on cherche à avoir une précision valant $10^{-9}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1e-09\n"
+      "30199.714220046437\n",
+      "10066.571406682146\n",
+      "10972.781264311896\n",
+      "6408.977651911514\n",
+      "5696.838744263851\n",
+      "1758.6475066826815\n",
+      "3733.4195535432364\n",
+      "654.4730635735383\n",
+      "2955.481973720247\n",
+      "259.31252660766313\n",
+      "2666.175300721002\n",
+      "96.43555766641505\n",
+      "2582.487347227242\n",
+      "27.895984497919926\n",
+      "2577.448115137805\n",
+      "1.6797440298123547\n",
+      "2593.2457705535703\n",
+      "5.265885138588449\n",
+      "2606.9056267942037\n",
+      "4.553285413544472\n",
+      "2613.738752738074\n",
+      "2.277708647956691\n",
+      "2616.173245442209\n",
+      "0.8114975680450698\n",
+      "2616.87565582102\n",
+      "0.23413679293692743\n",
+      "2617.0594479358956\n",
+      "0.06126403829193805\n",
+      "2617.105969388354\n",
+      "0.015507150819454788\n",
+      "2617.1176364311955\n",
+      "0.0038890142805030337\n",
+      "2617.1205554532166\n",
+      "0.0009730073403867815\n",
+      "2617.1212853438788\n",
+      "0.00024329688737149505\n",
+      "2617.1214678241854\n",
+      "6.082676888278608e-05\n"
      ]
     }
    ],
@@ -213,24 +250,28 @@
     "\n",
     "\n",
     "def iterate(Scol, rho, Tproton, cible):\n",
-    "    \"\"\"\"\"\"\n",
+    "    \"\"\"Utilise apply_trap et calcule l'erreur jusqu'à l'obtention de l'erreur désirée\"\"\"\n",
     "    erreur = cible + 1\n",
     "    n = 1\n",
     "    prev = apply_trap(0, Scol, rho, Tproton)\n",
     "    \n",
-    "    while erreur > cible:\n",
+    "    while erreur > cible and n < 30:\n",
     "        current = apply_trap(n, Scol, rho, Tproton)\n",
-    "        erreur = (current - prev) / 3\n",
+    "        erreur = abs(current - prev) / 3\n",
     "        prev = current\n",
     "        n += 1\n",
+    "        print(current)\n",
+    "        print(erreur)\n",
     "    \n",
     "    results = [n - 1, current, erreur]\n",
-    "    return current\n",
+    "    return results\n",
     "\n",
     "\n",
     "cible = 10 ** -9  # Erreur cible [cm]\n",
     "Tproton = 100  # Énergie cinétique du proton incident [MeV]\n",
     "\n",
+    "RCSDA_eau = iterate(Scol_eau, rho_eau, Tproton, cible)\n",
+    "#RCSDA_os = iterate(Scol_os, rho_os, Tproton, cible)\n",
     "\n"
    ]
   }
