Figured out number 6, WIP

--- a/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
+++ b/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
@@ -242,21 +242,21 @@
     }
    ],
    "source": [
-    "def apply_trap(n, Scol, rho, Tproton):\n",
+    "def apply_trap(n, Scol, rho, Tproton, start):\n",
     "    \"\"\"Évaluation de l'intégrale par la méthode des trapèzes pour la (n-1)ième itération\"\"\"\n",
-    "    test_points = np.linspace(0.05, Tproton, 2 ** n)\n",
+    "    test_points = np.linspace(start, Tproton, 2 ** n + 1)\n",
     "    integrale = np.trapz(Scol(test_points), x=test_points)\n",
     "    return integrale\n",
     "\n",
     "\n",
-    "def iterate(Scol, rho, Tproton, cible):\n",
+    "def iterate(Scol, rho, Tproton, cible, start):\n",
     "    \"\"\"Utilise apply_trap et calcule l'erreur jusqu'à l'obtention de l'erreur désirée\"\"\"\n",
     "    erreur = cible + 1\n",
     "    n = 1\n",
-    "    prev = apply_trap(0, Scol, rho, Tproton)\n",
+    "    prev = np.trapz(Scol(), x=)\n",
     "    \n",
-    "    while erreur > cible and n < 30:\n",
-    "        current = apply_trap(n, Scol, rho, Tproton)\n",
+    "    while erreur > cible and n < 20:\n",
+    "        current = prev / 2 + apply_trap(n, Scol, rho, Tproton, start)\n",
     "        erreur = abs(current - prev) / 3\n",
     "        prev = current\n",
     "        n += 1\n",
@@ -269,6 +269,7 @@
     "\n",
     "cible = 10 ** -9  # Erreur cible [cm]\n",
     "Tproton = 100  # Énergie cinétique du proton incident [MeV]\n",
+    "start = 0.05\n",
     "\n",
     "RCSDA_eau = iterate(Scol_eau, rho_eau, Tproton, cible)\n",
     "#RCSDA_os = iterate(Scol_os, rho_os, Tproton, cible)\n",
