--- a/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
+++ b/TP1_Gabriel_Hemond_Meriem_Khalfoun.ipynb
@@ -346,7 +346,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 10.\n",
+    "Avec l'approximation grossière $N\\sim C^{-\\frac{1}{2}}$ où $N$ est le nombre de points à considérer et $C$ est l'erreur désirée, on obtient que le nombre de points à utiliser est environ 31623. Afin de s'assurer que l'erreur sera toujours plus basse que $10^{-9}$cm, nous utiliserons plutôt 32000 points."
+   ]
   },
   {
    "cell_type": "code",
